Show top 3 players

--- a/AngularApp/src/app/high-scores/high-scores.component.html
+++ b/AngularApp/src/app/high-scores/high-scores.component.html
@@ -6,6 +6,6 @@
 </div>
 <div *ngIf="player">
     <div *ngFor="let p of player">
-        <p>{{p.username}}</p>
+        <p>{{p.username}}-{{p.score}}</p>
     </div>
 </div>
