--- a/AngularApp/src/app/button/button.component.html
+++ b/AngularApp/src/app/button/button.component.html
@@ -1,3 +1,2 @@
 <h1>Scoring Button</h1>
-<button type="button" class="btn btn-outline-primary" (click)="open($event)">Scoring Button</button>
-
+<button type="button" class="btn btn-outline-primary" (click)="incrementScore()">Click Me</button>
