--- a/ReactApp/src/App.css
+++ b/ReactApp/src/App.css
@@ -1,3 +1,26 @@
 .App {
   text-align: center;
 }
+
+article {
+  font-size: 1.2rem;
+  width: 90%;
+  margin: 1rem;
+}
+
+img {
+  width: 100px;
+  border: 0.2rem solid #000;
+  border-radius: 50%;
+  margin: 1rem;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
+
+.column {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: left;
+}
